[package]
name = "wavetable"
version = "0.1.3"
authors = ["ICS"]
edition = "2018"
license = "MIT"
repository = "https://github.com/icsga/Wavetable"
description = "A library for wavetable handling."

[dependencies]
flexi_logger = "0.14"
log = "0.4"
rustfft = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
