[package]
name = "wavetable"
version = "0.2.0"
authors = ["ICS"]
edition = "2018"
license = "MIT"
repository = "https://github.com/icsga/Wavetable"
description = "A library for wavetable handling."

[features]
use_double_precision = []

[dependencies]
crossbeam = "0.8"
scoped_threadpool = "0.1.9"
flexi_logger = "0.14"
log = "0.4"
num = "0.3"
rustfft = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
